--- a/vignettes/c060_vignette.Rnw
+++ b/vignettes/c060_vignette.Rnw
@@ -1,4 +1,4 @@
-\documentclass[nojss]{jss}
+\documentclass{jss}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% declarations for jss.cls %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -384,7 +384,8 @@ obj  <- peperr(response=Surv(pData(eset)$os, pData(eset)$os_status),
                penalty.factor=rep(0:1, times=c(1,dim(eset)[1]))),
                RNG="fixed", seed=0815, cpus=3, parallel=T, clustertype="SOCK", 
                load.list=list(packages=c("c060")), 
-               indices=resample.indices(n=dim(eset)[2], sample.n=10, method="sub632"))
+               indices=resample.indices(n=dim(eset)[2],
+               sample.n=10, method="sub632"))
 @
 
 Individual bootstrap results can be visualized with the \code{plot.peperr} function from the \pkg{peperr} package showing the selected complexity parameters, 
@@ -449,7 +450,8 @@ In this section we fit an elastic net model instead of lasso to the same data se
 The required objects and parameters for finding elastic net Cox model with optimal parameters are listed below:
 <<interval_search_setup,results=hide>>=
   x <- t(exprs(eset))
-  y <- cbind(time=pData(geo_exprs_data)$os,status=pData(geo_exprs_data)$os_status)
+  y <- cbind(time=pData(geo_exprs_data)$os
+             ,status=pData(geo_exprs_data)$os_status)
 
   bounds <- t(data.frame(alpha=c(0, 1)))
   
@@ -506,7 +508,7 @@ if (file.exists(".Rdata/fit_interval_search.RData")) {
 
 Summary information can be extracted from the \texttt{fit} object using  \code{summary.int.search} function.
 <<interval_search_cox_extract,echo=FALSE,results=hide>>=
-summary.int<-summary.int.search(fit,verbose = FALSE)
+summary.int <- summary.int.search(fit,verbose = FALSE)
 @
 
 <<interval_search_cox_extract_show>>=
@@ -520,8 +522,8 @@ At the initial step we sample 21 points in the parameter space. Those points are
 
 <<interval_search_cox_fit_opt, echo=FALSE,results=hide>>=
 #select the model with optimal parameters from the object fit
-opt.model<-summary.int$opt.models[[1]]
-cofn<-get.cofn.int.search(opt.model)
+opt.model <- summary.int$opt.models[[1]]
+cofn <- get.cofn.int.search(opt.model)
 @
 
 The final elastic net model contains \Sexpr{length(cofn)} selected features, which obviously reflects much less sparsity than the final lasso model.
